feat: start on gitee auth procedure

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,11 @@
       <form onsubmit="handleSubmit(event)" method="post" autocomplete="on">
         <fieldset>
           <label for="vendor">Vendor</label>
-          <input name="vendor" placeholder="Github, GitLab, etc." required />
+          <input
+            name="vendor"
+            placeholder="Github, GitLab, Gitee, etc."
+            required
+          />
 
           <br />
           <label for="input">Input</label>
