--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
         }
       };
 
+      const handleError = (error) => {
+        console.error(error);
+      };
+
       const handleSubmit = async (event) => {
         // console.log("handleSubmit: ", event);
         event.preventDefault();
@@ -48,13 +52,13 @@
 
         const result = await fetch("/", {
           method: "POST",
-          body: JSON.stringify(payload),
           headers: {
             "Content-Type": "application/json",
           },
+          body: JSON.stringify(payload),
         })
           .then((res) => res.json())
-          .catch((error) => console.error(error));
+          .catch(handleError);
 
         console.log("result: ", result);
         !!result &&
